# dami

./: .gcloudignore  .gitignore  GEMINI.md  Makefile  app.dockerfile  cloudbuild.yaml  docker-compose.yaml  hello.py  pyproject.toml
bigquery/schema/: moneyforward.json  test_polars.json
scripts/: update_mf.py
src/dami/: container.py  settings.py
src/dami/db/: common.py  finance.py
src/dami/ext/: bq.py  gcs.py
src/dami/services/: moneyforward.py
src/dami/types/: bq.py
terraform/: .terraform.lock.hcl  cloudrun.tf  locals.tf  main.tf  registry.tf  storage.tf
tests/: conftest.py  test_ext.py  test_services.py
